common/common.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

:root {
  --main-bg-color: #f5f5f5;
  --main-text-color: #363636;
  --primary-color: #00d1b2; /* Couleur primaire de Bulma */
  --secondary-color: #3273dc; /* Couleur secondaire de Bulma */
  --accent-color: #ffdd57; /* Couleur d'accentuation de Bulma */
  --info-color: #209cee; /* Couleur info de Bulma */
  --success-color: #23d160; /* Couleur succès de Bulma */
  --warning-color: #ffdd57; /* Couleur avertissement de Bulma */
  --danger-color: #ff3860; /* Couleur danger de Bulma */

  --darker-bg-color: hsl(0, 0%, 85%);
}

body, html {
  font-family: "Inter", sans-serif;
  user-select: none;
  overflow:hidden;
}

#app{
  height: 100vh;
  display: flex;
  flex-direction: column;
  overflow: auto;
}

.vertical-divider{
  border-left: 1px solid rgba(0, 0, 0, 0.205);
  padding:0px;
}

.deletable-tab{
  padding-left: 0rem !important;
  padding-right: 0.1rem !important;
}

.tab-delete{
  margin-inline-start: .25em !important;
  visibility: hidden;
}
.deletable-tab:hover .tab-delete{
  visibility:visible;
}

/* Remove the arrows in number inputs*/
.no-spin::-webkit-inner-spin-button, .no-spin::-webkit-outer-spin-button {
	-webkit-appearance: none !important;
	margin: 0 !important;
}
.no-spin{
	-moz-appearance:textfield !important;
}

.has-bottom-round-corner{
  border-end-start-radius: 0.75rem;
  border-end-end-radius: 0.75rem;
}

.has-box-shadow{
  box-shadow: rgba(9, 10, 12, 0.1) 0px 8px 16px -2px, rgba(9, 10, 12, 0.02) 0px 0px 0px 1px
}

.main-container{
  margin: 0 !important;
}

.modal{
  z-index: 200 !important;
}

/*----------------------------------------------------------------------------------------------
----------------------------------------------NAVBAR--------------------------------------------
----------------------------------------------------------------------------------------------*/
.navbar{
  -webkit-app-region: drag;
}
.navbar-end, .navbar-start, .navbar-brand{
  -webkit-app-region: no-drag;
}

.window-control{
  padding-left: 0px;
  padding-right: 0px;
}

#menu-dropdown-container .navbar-dropdown {
  right: 0;
  left: auto;
}

/*----------------------------------------------------------------------------------------------
--------------------------------------------SCROLLBAR-------------------------------------------
----------------------------------------------------------------------------------------------*/
/* Works on Firefox */
* {
  scrollbar-width: thin;
  scrollbar-color: rgb(167, 167, 167) rgba(182, 182, 182, 0);
}

/* Works on Chrome, Edge, and Safari */
*::-webkit-scrollbar {
  width: 12px;
}

*::-webkit-scrollbar-track {
  background: transparent;
}

*::-webkit-scrollbar-thumb {
  background-color: rgba(138, 138, 138, 0.37);
  border-radius: 10px;
}

*::-webkit-scrollbar-button{
  background: transparent;
}

/*----------------------------------------------------------------------------------------------
---------------------------------------------LOADING--------------------------------------------
----------------------------------------------------------------------------------------------*/
.modal-spinner-container {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 136px; /* Conserve la hauteur pour éviter un saut visuel */
}

.modal-spinner {
  width: 48px;
  height: 48px;
  border: 5px solid #dbdbdb;
  border-top-color: #3273dc;
  border-radius: 50%;
  animation: spin 1s linear infinite;
}

@keyframes spin {
  to { transform: rotate(360deg); }
}

